--- a/css/team_four_styles.css
+++ b/css/team_four_styles.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
 
 body {
-  background-image: url(Background.jpg);
+  background-image: url(../images/Background.jpg);
 
   font-family: "Open Sans", sans-serif;
   padding: 5px 25px;
